--- a/views/front.ejs
+++ b/views/front.ejs
@@ -28,64 +28,64 @@
   </form>
   
   <a href="#" id="room1"> <!-- NOTE: These room IDs can be whatever id we give them in the db, and don't need to be 1, 2, 3, etc. -->
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room2">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room3">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
-    <h1>Room Name</a>
+    <h1>Room Name</h1>
     <h2>Language</h2>
     <p>4 people in this room</p>
     <small>Room created by Chris Powers</small>
-  </a href="#">
+  </a>
 
   <a href="#" id="room1">
     <p>Create your own room now</p>
-  </a href="#">
+  </a>
 
 </section>
 
