--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,6 +83,10 @@
   <script src="/_/js/watchers.js"></script>
   <script src="/_/js/comments.js"></script>
   <script src="http://staging.tokbox.com/v0.91/js/TB.min.js"></script>
+  <script src="/_/js/tokbox.js"></script>
+  <script>
+    codingstage.tokbox.init({key: <%= otKey %>, token: "<%= otToken %>", sessionId: "<%= stage.channel %>"});
+  </script>
 
 <!-- this is a variation of the official analytics snippet: http://mathiasbynens.be/notes/async-analytics-snippet 
    replace XXXXXX-XX with your site's ID and uncomment to put this into effect
