Added persistence to the stage code

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -45,7 +45,7 @@
 		<section id="editor">
 	
 			<!-- This section must not have whitespace in it, otherwise that gets inserted into the buffer when ACE inits. -->
-			<section id="ace-editor"></section>
+                        <section id="ace-editor"><%= stage.content %></section>
 
 			<label for="files">Room Files</label>
 			<select id="files" name="files">
