--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,9 @@
+<%
+  var stage = stage || null,
+      otKey = otKey || null,
+      otToken = otToken || null,
+      pusher = pusher || null;
+%>
 <!doctype html>  
 
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
