--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,14 +7,7 @@
 	<h1><a href="/" title="Coding Stage's Front Door">Coding Stage</a></h1>
 	<iframe src="http://nodeknockout.com/iframe/team-honey-badger" frameborder=0 scrolling=no allowtransparency=true width=115 height=25 class="vote"></iframe>
 
-	<nav>
-		<ol>
-			<li class="profile"><a href="/profile" title="Your Account Details">Profile</a></li>
-			<li class="support"><a href="/support" title="Having Problems?">Support</a></li>
-			<li class="create-room"><a href="/stages/new" title="Create a Room and Start Coding">Create a Room</a></li>
-			<li class="login"><a href="/login" title="Create Your Account">Signup <span>or</span> Login</a></li>
-		</ol>
-	</nav>
+        <%- partial("nav") %>
 
 </header>
 
