Updated tokbox code to allow for containers to remain intact.
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -105,15 +105,19 @@
 	<section id="video-chat">
 
 		<article id="tokbox-team-1" class="baton">
+		  <div id="tokbox-team-1-placeholder"></div>
 		</article>
 
 		<article id="tokbox-team-2">
+		  <div id="tokbox-team-2-placeholder"></div>
 		</article>
 
 		<article id="tokbox-team-3">
+		  <div id="tokbox-team-3-placeholder"></div>
 		</article>
 
 		<article id="tokbox-team-4">
+		  <div id="tokbox-team-4-placeholder"></div>
 		</article>
 
 		<a href="#" class="button">Join the video chat</a>
