--- a/views/front.ejs
+++ b/views/front.ejs
@@ -12,86 +12,87 @@
   <p>Like Gist without the waiting.</p>
 </article>
 
-<section id="room-list">
+<section id="stage-list">
 
-  <h1>Join a recently active room</h1>
+  <h1>Join a recently active stage</h1>
 
   <form id="search">
-    <input type="text" placeholder="Search for a specific room">
+    <input type="text" placeholder="Search for a specific stage">
   </form>
   
-  <a href="#" id="room1"> <!-- NOTE: These room IDs can be whatever id we give them in the db, and don't need to be 1, 2, 3, etc. -->
-    <h1>Room Name</h1>
+  <a href="#" id="stage1"> <!-- NOTE: These stage IDs can be whatever id we give them in the db, and don't need to be 1, 2, 3, etc. -->
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room2">
-    <h1>Room Name</h1>
+  <a href="#" id="stage2">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room3">
-    <h1>Room Name</h1>
+  <a href="#" id="stage3">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <h1>Room Name</h1>
+  <a href="#" id="stage4">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <h1>Room Name</h1>
+  <a href="#" id="stage5">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <h1>Room Name</h1>
+  <a href="#" id="stage6">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <h1>Room Name</h1>
+  <a href="#" id="stage7">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <h1>Room Name</h1>
+  <a href="#" id="stage8">
+    <h1>Stage Name</h1>
     <h2>Language</h2>
-    <p>4 people in this room</p>
-    <small>Room created by Chris Powers</small>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="room1">
-    <p>Create your own room now</p>
+  <a href="#" id="stage9">
+    <h1>Stage Name</h1>
+    <h2>Language</h2>
+    <p>There's 4 people in here</p>
+    <small>Stage created by Chris Powers</small>
+  </a>
+
+
+  <a href="#" id="create">
+    <p>Create your own stage now</p>
   </a>
 
 </section>
 
 <footer>
 	
-	<nav>
-		<ol>
-			<li class="profile"><a href="/profile" title="Your Account Details">Profile</a></li>
-			<li class="support"><a href="/support" title="Having Problems?">Support</a></li>
-			<li class="create-room"><a href="/create-room" title="Create a Room and Start Coding">Create a Room</a></li>
-			<li class="login"><a href="/login" title="Create Your Account">Signup <span>or</span> Login</a></li>
-		</ol>
-	</nav>
+        <%- partial("nav") %>
 
 	<small><a href="/" title="Coding Stage's Front Door">Coding Stage</a> was built for 2011's <a href="http://nodeknockout.com/">Node Knockout</a> by <a href="http://chrisjpowers.com" title="Chris' website" rel="me">Chris J. Powers</a> (<a href="http://twitter.com/chrisjpowers" title="@chrisjpowers on Twitter" rel="me">@chrisjpowers</a>), <a href="http://benmillsdesigns.com" title="Ben's website" rel="me">Ben Mills</a> (<a href="http://twitter.com/benemills" title="@benemills on Twitter" rel="me">@benemills</a>), <a href="http://jeremyckahn.com" title="Jeremy's website" rel="me">Jeremy C. Kahn</a> (<a href="http://twitter.com/jeremyckahn" title="@jeremyckahn on Twitter" rel="me">@jeremyckahn</a>) & <a href="http://lovehasnologic.com" title="Mike's website" rel="me">Michael Gibson</a> (<a href="http://twitter.com/lovehasnologic" title="@lovehasnologic on Twitter" rel="me">@lovehasnologic</a>). Fugue iconset from <a href="http://www.pinvoke.com/">Yusuke Kamiyamane</a>.</small>
 	
