Header and Footer moved to partials
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,14 +2,7 @@
   document.documentElement.setAttribute('data-pusherchannel', '<%= stage.channel %>' );
 </script>
 
-<header>
-
-	<h1><a href="/" title="Coding Stage's Front Door">Coding Stage</a></h1>
-	<iframe src="http://nodeknockout.com/iframe/team-honey-badger?css=https://raw.github.com/gist/1176404/e336c0efd7c6d78fa1f49fda2f5e813ab747f580/ko-button.css" frameborder=0 scrolling=no allowtransparency=true width=115 height=25 class="vote"></iframe>
-
-        <%- partial("nav") %>
-
-</header>
+        <%- partial("header") %>
 
 <div id="main">
 
@@ -223,12 +216,6 @@
 
 </aside>
 
-<footer>
-	
-        <%- partial("nav") %>
-
-	<small><a href="/" title="Coding Stage's Front Door">Coding Stage</a> was built for 2011's <a href="http://nodeknockout.com/">Node Knockout</a> by <a href="http://chrisjpowers.com" title="Chris' website" rel="me">Chris J. Powers</a> (<a href="http://twitter.com/chrisjpowers" title="@chrisjpowers on Twitter" rel="me">@chrisjpowers</a>), <a href="http://benmillsdesigns.com" title="Ben's website" rel="me">Ben Mills</a> (<a href="http://twitter.com/benemills" title="@benemills on Twitter" rel="me">@benemills</a>), <a href="http://jeremyckahn.com" title="Jeremy's website" rel="me">Jeremy C. Kahn</a> (<a href="http://twitter.com/jeremyckahn" title="@jeremyckahn on Twitter" rel="me">@jeremyckahn</a>) & <a href="http://lovehasnologic.com" title="Mike's website" rel="me">Michael Gibson</a> (<a href="http://twitter.com/lovehasnologic" title="@lovehasnologic on Twitter" rel="me">@lovehasnologic</a>). Fugue iconset from <a href="http://www.pinvoke.com/">Yusuke Kamiyamane</a>.</small>
-	
-</footer>
+        <%- partial("footer") %>
 
         <%- partial("login-modal") %>
